# nnunet_serve

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO  data_json.json  fe.py  model-serve-spec.yaml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md  objects.inv
docs/documentation/: 1-nnunet_api.md  api_datamodels.md  logging_utils.md  orthanc_access.md  process_pool.md  seg_writers.md  sitk_utils.md  utils.md
docs/documentation/2-nnunet_api_utils/: index.html
docs/documentation/api_datamodels/: index.html
docs/documentation/process_pool/: index.html
docs/documentation/sitk_utils/: index.html
docs/documentation/utils/: index.html
docs/usage/: 1-model-configuration.md  2-cli.md  3-api.md
docs_zensical/documentation/: 2-nnunet_api_utils.md
metadata/: hcc-frac.json  prostate-lesion.json
site/: 404.html  index.html  objects.inv  search.json
site/documentation/1-nnunet_api/: index.html
site/documentation/logging_utils/: index.html
site/documentation/orthanc_access/: index.html
site/documentation/seg_writers/: index.html
src/nnunet_serve/: __init__.py  api_datamodels.py  category_mapping.py  coding.py  file_utils.py  logging_utils.py  nnunet_api.py  nnunet_api_utils.py  nnunet_serve.py  nnunet_serve_api.py  nnunet_serve_utils.py  orthanc_access.py  process_pool.py  pydicom_seg_template.py  pydicom_seg_writers.py  seg_writers.py  sitk_utils.py  str_processing.py  totalseg_utils.py  utils.py
src/nnunet_serve/assets/schemas/: common-schema.json  seg-schema.json
src/nnunet_serve/entrypoints/: entrypoint-prod.py  entrypoint.py  entrypoint_batch.py  entrypoint_prod.py  validate_metadata.py
utils/: change_params_in_ckpt.py  entrypoint-prod.py  logging_utils.py  nnunet_serve.py  nnunet_serve_utils.py  seg_writers.py  utils.py
