[project]
name = "nnunet_serve"
version = "0.1.0"
description = "Tools to distribute and deploy nnUNet."
authors = [
    {name = "José Guilherme de Almeida", email = "jose.almeida@research.fchampalimaud.org"},
]
dependencies = [
    "pydicom>=3",
    "pydicom-seg>=0.4.1",
    "SimpleITK>=2.3.1",
    "nnunetv2==2.2.1",
    "pydantic>=2.12.2",
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pytest>=8.4.2",
    "highdicom>=0.23",
    "rt-utils>=1.2.7",
    "ruff>=0.14.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["src/foo"]

[tool.uv.sources]
pydicom-seg = { git = "https://github.com/josegcpa/pydicom-seg" }
