[project]
name = "nnunet_serve"
version = "0.1.0"
description = "One-size-fits-all to perform cascading inferences using nnU-Net and TotalSegmentator."
authors = [
    {name = "José Guilherme de Almeida", email = "jose.almeida@research.fchampalimaud.org"},
]
dependencies = [
    "pydicom>=3",
    "SimpleITK>=2.3.1",
    "nnunetv2>=2.2.1",
    "pydantic>=2.12.2",
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pytest>=8.4.2",
    "highdicom>=0.23",
    "rt-utils>=1.2.7",
    "ruff>=0.14.1",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "totalsegmentator>=2.5",
    "dicom2nifti>=2.6.0",
    "owlready2>=0.48",
    "torch>=2.9.0",
    "python-multipart>=0.0.20",
    "cachetools>=6.2.1",
    "requests>=2.32.5",
    "pydicom-seg",
    "numpy>=2.2.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
totalsegmentator = { git = "https://github.com/wasserth/TotalSegmentator" }
pydicom-seg = { git = "https://github.com/josegcpa/pydicom-seg" }

[project.scripts]
nnunet-predict = "nnunet_serve.entrypoints.entrypoint:main"
nnunet-predict-batch = "nnunet_serve.entrypoints.entrypoint_batch:main"
nnunet-validate-metadata = "nnunet_serve.entrypoints.validate_metadata:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
